carTemplate.css
* {
    -webkit-print-color-adjust: exact !important;   /* Chrome, Safari, Edge */
    color-adjust: exact !important;                 /*Firefox*/
}

.dropdown-backdrop {
    position: static;
}

.inputdiv{
	margin-top: 1rem;
	margin-bottom: 1rem;
	margin-left: auto;
	margin-right: auto;
	width: auto;
	max-width: 38rem;
}
.wide-inputdiv{
	margin-top: 1rem;
	margin-bottom: 1rem;
	margin-left: auto;
	margin-right: auto;
	width: auto;
	max-width: 60rem;
}
.teacherrem{
	margin-top: 1rem;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 1rem;
}
.outputdiv{
	margin-top: 1rem;
	margin-bottom: 1rem;
	margin-left: auto;
	margin-right: auto;
}
.center {
	margin: auto;
	width: 50%;
	padding: 10px;
}
.centercard{
	margin: auto;
	min-width: 75%;
	padding: 1px;
}

.dotborder {
	border: dashed 3px;
	border-radius: 10px;
}

#endform {
	margin-left: 1rem;
	max-width:90%;
}

.buttondiv{
	height: 7rem;
	margin-top: 1rem;
	margin-bottom: 1rem;
	margin-left: 1rem;
	margin-right: 1rem;
	width: auto;
	max-width: 50rem;
}

.trHideOnPrint{

}

.spaced{
	margin-top: .5rem;
	margin-bottom: .5rem;
}

.bigtext{
	font-size:1.25em;
}

.table{
	margin:1em;
	padding:1em;
}

.phontable{
	max-width:90%;
}

.pco{
	cursor: pointer;
}

.pcf{
	background-color: limegreen;
	border: 1px dotted black;
	cursor: pointer;
}
.mid{
	background-color: #FFEA00;
}

.wrong{
	background-color: tomato; 
}

.wrongtoggle{
	background-color: tomato;
	cursor: pointer;
}

